RESOLVED FIXED137495
[iOS] WebKit1 clients crash in DiskCacheMonitor::tryGetFileBackedSharedBufferFromCFURLCachedResponse()
https://bugs.webkit.org/show_bug.cgi?id=137495
Summary [iOS] WebKit1 clients crash in DiskCacheMonitor::tryGetFileBackedSharedBuffer...
Pratik Solanki
Reported 2014-10-07 12:36:24 PDT
In r173782, I moved the disk cache handling code from the main thread (UI thread) to the web thread when we are using WebKit1 on iOS. The code tries to access the CFCachedURLResponseRef passed in the block on the web thread. This is problematic because the object may have been released before the block gets to run on the web thread. We need to manually retain/release the response.
Attachments
Patch (1.61 KB, patch)
2014-10-07 12:38 PDT, Pratik Solanki
no flags
Pratik Solanki
Comment 1 2014-10-07 12:37:04 PDT
Pratik Solanki
Comment 2 2014-10-07 12:38:36 PDT
Andreas Kling
Comment 3 2014-10-07 13:00:46 PDT
Comment on attachment 239427 [details] Patch r=me
WebKit Commit Bot
Comment 4 2014-10-07 13:37:56 PDT
Comment on attachment 239427 [details] Patch Clearing flags on attachment: 239427 Committed r174404: <http://trac.webkit.org/changeset/174404>
WebKit Commit Bot
Comment 5 2014-10-07 13:38:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.