[iOS] WebKit1 clients crash in DiskCacheMonitor::tryGetFileBackedSharedBufferFromCFURLCachedResponse() https://bugs.webkit.org/show_bug.cgi?id=137495 <rdar://problem/18495034>

Reviewed by Andreas Kling.

Retain/release the CFCachedURLResponseRef object otherwise we could access a deleted object
and crash on the web thread.

* loader/cocoa/DiskCacheMonitorCocoa.mm:
(WebCore::DiskCacheMonitor::DiskCacheMonitor):


Canonical link: https://commits.webkit.org/155315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174404 268f45cc-cd09-0410-ab3c-d52691b4dbfc